added Trend Hunter, sorted by date of publication (latest first)

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -6,7 +6,7 @@ block append subtitle
 block content
   h2 They were talking about us
   hr
-  p: i Last update: 11 February 2023
+  p: i Last update: 15 February 2023
   hr
 
   ul
@@ -14,11 +14,12 @@ block content
     li #[+ax('https://www.digikey.jp/en/maker/videos/maker-update/2022/donald-bell-maker-update-favorite-projects-of-2022') Digikey Electronics] Favorite Projects of 2022
     li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
     li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] Alpakka is an open source gamepad based on the Raspberry Pi Pico
-    li #[+ax('https://picockpit.com/raspberry-pi/raspberry-pi-projects-alpakka-game-controller-blackout-logger-light-meter/') PiCockpit] Alpakka controller for the Pico
-    li #[+ax('https://hackaday.com/2022/12/22/alpakka-a-creative-commons-game-controller/') Hackaday] Alpakka: A creative commons game controller
-    li #[+ax('https://www.3printr.com/alpakka-open-source-controller-from-the-3d-printer-5160227/') 3Printr] Alpakka: Open Source Controller from the 3D Printer
-    li #[+ax('https://hi-tech.mail.ru/news/61243-soberi-sam-predstavlen-geympad-s-otkrytym-ishodnym-kodom/') Hi-tech] Do It Yourself: Open source gamepad
-    li #[+ax('https://youtu.be/ESY2u-6I8-w?t=714') LinuxGameCast] Pedro still has that funky controller
-    li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] This DIY game controller looks like a low-poly object taken from a video game
-    li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] Build your own accessible Alpakka gaming controller
     li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] Could this be the year for controller innovation?
+    li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] Build your own accessible Alpakka gaming controller
+    li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] This DIY game controller looks like a low-poly object taken from a video game
+    li #[+ax('https://youtu.be/ESY2u-6I8-w?t=714') LinuxGameCast] Pedro still has that funky controller
+    li #[+ax('https://hi-tech.mail.ru/news/61243-soberi-sam-predstavlen-geympad-s-otkrytym-ishodnym-kodom/') Hi-tech] Do It Yourself: Open source gamepad
+    li #[+ax('https://www.3printr.com/alpakka-open-source-controller-from-the-3d-printer-5160227/') 3Printr] Alpakka: Open Source Controller from the 3D Printer
+    li #[+ax('https://www.trendhunter.com/trends/alpakka-controller') Trend Hunter] The Alpakka Controller Showcases an Elevated Form and Function
+    li #[+ax('https://hackaday.com/2022/12/22/alpakka-a-creative-commons-game-controller/') Hackaday] Alpakka: A creative commons game controller
+    li #[+ax('https://picockpit.com/raspberry-pi/raspberry-pi-projects-alpakka-game-controller-blackout-logger-light-meter/') PiCockpit] Alpakka controller for the Pico
