--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,7 +10,7 @@ block content
   hr
 
   ul
-    li #[+ax('https://www.youtube.com/watch?v=OrucAJknMys?t=71') NerdNest] This CHANGED MY MIND about the Steam Controller 2
+    li #[+ax('https://youtu.be/OrucAJknMys?t=71') NerdNest] This CHANGED MY MIND about the Steam Controller 2
     li #[+ax('https://www.digikey.jp/en/maker/videos/maker-update/2022/donald-bell-maker-update-favorite-projects-of-2022') Digikey Electronics] Favorite Projects of 2022
     li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
     li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] Alpakka is an open source gamepad based on the Raspberry Pi Pico
