Replaced Digikey with YT video.

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -11,7 +11,7 @@ block content
 
   ul
     li #[+ax('https://youtu.be/OrucAJknMys?t=71') NerdNest] This CHANGED MY MIND about the Steam Controller 2
-    li #[+ax('https://www.digikey.jp/en/maker/videos/maker-update/2022/donald-bell-maker-update-favorite-projects-of-2022') Digikey Electronics] Favorite Projects of 2022
+    li #[+ax('https://youtu.be/Bcpz1bi7Uek?t=1641') Digikey Electronics] Favorite Projects of 2022
     li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
     li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] Alpakka is an open source gamepad based on the Raspberry Pi Pico
     li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] Could this be the year for controller innovation?
