Changed links to squarespace

--- a/src/pug/alpakka/manual/diy_getting_started.pug
+++ b/src/pug/alpakka/manual/diy_getting_started.pug
@@ -19,13 +19,13 @@ block content
 
   h3 Get 3D-Printed Parts
   p Check #[+a("diy_case") 3D-print Case and Buttons].
-  p One problematic part appears to be the conductive Hex. Conductive filament is expensive to order and ship for just one Alpakka and one Hex. However, you can now #[+ax("https://inputlabs.myshopify.com/products/alpakka-bolts-kit") get it from our shop].
+  p One problematic part appears to be the conductive Hex. Conductive filament is expensive to order and ship for just one Alpakka and one Hex. However, you can now #[+ax("https://inputlabs.squarespace.com/everyone/p/alpakka-conductive-hexagon") get it from our shop].
   p If you don't have a 3D printer yourself, you might want to check what is available in your vicinity. Would you be able to 3D-print in your local library? Are there professional shops nearby that offer a 3D-printing service?
   p Check the #diy-share-parts channel of our #[+ax(org.discord) Discord] server for people in your region that might be willing to print for you.
   hr
 
   h3 Nuts and Bolts
-  p Check your workshop. Maybe you have some suitable M2.5 nuts and bolts laying around? Otherwise, your local hardware store will certainly have them. And if you want to support us, we offer the complete #[+ax("https://inputlabs.myshopify.com/products/alpakka-bolts-kit") Alpakka Bolts kit] in our shop.
+  p Check your workshop. Maybe you have some suitable M2.5 nuts and bolts laying around? Otherwise, your local hardware store will certainly have them. And if you want to support us, we offer the complete #[+ax("https://inputlabs.squarespace.com/everyone/p/alpakka-bolts-kit") Alpakka Bolts kit] in our shop.
   hr
 
   h3 Assembly
@@ -33,4 +33,3 @@ block content
   hr
 
   p Enjoy!
-  
