--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,7 @@ block content
   hr
 
   ul
+    li #[+ax('https://youtu.be/0LORbheX_q8') SilverSeraphym] The Alpakka: A Creative Commons Controller
     li #[+ax('https://youtu.be/OrucAJknMys?t=71') NerdNest] This CHANGED MY MIND about the Steam Controller 2
     li #[+ax('https://youtu.be/Bcpz1bi7Uek?t=1641') Digikey Electronics] Favorite Projects of 2022
     li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
