--- a/src/pug/alpakka/manual/diy_getting_started.pug
+++ b/src/pug/alpakka/manual/diy_getting_started.pug
@@ -12,24 +12,24 @@ block content
   p The rest is up to your capabilities and available tools.
   hr
 
-  h3 Get the PCB and Components
-  p There are various places from where you can order the PCB and electronic components. Their capabilities, available components, and obviously prices, will vary. Check #[+a("diy_pcb") how we get our PCBs] and how to #[+a("diy_solder") solder] the components.
+  h3 Get the PCB and components
+  p There are various places from where you can order the PCB and electronic components. Of course manufacturers have different capabilities, available components, and prices, etc. Check #[+a("diy_pcb") how we get our PCBs] and how to #[+a("diy_solder") solder] the components.
   p Usually PCB manufacturers have a minimum order number, so it may be worth checking the #diy-share-parts channel of our #[+ax(org.discord) Discord] server for people in your region that might be interested in sharing order and shipping costs.
   hr
 
-  h3 Get 3D-Printed Parts
+  h3 Get 3D-printed parts
   p Check #[+a("diy_case") 3D-print Case and Buttons].
   p One problematic part appears to be the conductive Hex. Conductive filament is expensive to order and ship for just one Alpakka and one Hex. However, you can now #[+ax("https://inputlabs.squarespace.com/everyone/p/alpakka-conductive-hexagon") get it from our shop].
   p If you don't have a 3D printer yourself, you might want to check what is available in your vicinity. Would you be able to 3D-print in your local library? Are there professional shops nearby that offer a 3D-printing service?
-  p Check the #diy-share-parts channel of our #[+ax(org.discord) Discord] server for people in your region that might be willing to print for you.
+  p Check the #[em #diy-share-parts] channel of our #[+ax(org.discord) Discord] server for people in your region that might be willing to print for you.
   hr
 
-  h3 Nuts and Bolts
+  h3 Nuts and bolts
   p Check your workshop. Maybe you have some suitable M2.5 nuts and bolts laying around? Otherwise, your local hardware store will certainly have them. And if you want to support us, we offer the complete #[+ax("https://inputlabs.squarespace.com/everyone/p/alpakka-bolts-kit") Alpakka Bolts kit] in our shop.
   hr
 
   h3 Assembly
-  p Check #[+a("diy_assembly") how to assemble the Alpakka] and watch the #[+ax('https://www.youtube.com/watch?v=yYwrVL2b9eM') DIY video] again.
+  p Check #[+a("diy_assembly") how to assemble the Alpakka] and watch the #[+ax('https://youtu.be/yYwrVL2b9eM?t=276') DIY video] again.
   hr
 
   p Enjoy!
