Blog post about the shop, and overall website references to it

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -21,7 +21,7 @@
 
   const parent = {
     db:            '/db/stats',
-    blog:          '/blog/report_8',
+    blog:          '/blog/shop_opening',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
