--- a/src/pug/alpakka/manual/faq.pug
+++ b/src/pug/alpakka/manual/faq.pug
@@ -64,7 +64,7 @@ block content
   hr
 
   +h3id('buy') Can I buy a controller?
-  p No, but check #[+a('/about') About] page for some ideas about this topic.
+  p Not directly, but you can check where to buy components and DIY kits at #[+a('/alpakka/components') Alpakka components] page.
   hr
 
   +h3id('test') Can I get a free controller?
