--- a/src/pug/blog/report_8.pug
+++ b/src/pug/blog/report_8.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #8
-  +news_header('10 February 2023', 'report_7', null)
+  +news_header('10 February 2023', 'report_7', 'shop_opening')
 
   h3 Generic gamepad mode added to the firmware
   p We released #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.87.0') Firmware 0.87.0], which includes:
