--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('shop_opening') Shop opening
           +wikilink('report_8') Progress report 8
           +wikilink('report_7') Progress report 7
           +wikilink('report_6') Progress report 6
