--- a/src/static/style.css
+++ b/src/static/style.css
@@ -104,7 +104,7 @@ header .logo span {
 }
 header .icon img {
   height: 36px;
-  margin-right: 24px;
+  margin-right: 15px;
   opacity: 0.5;
 }
 header .nav .tab a {
@@ -806,6 +806,9 @@ table, tr, th, td {
 @media (min-width: 1446px) {
   header {
     width: 1450px;
+  }
+  header .icon img{
+    margin-right: 24px;
   }
   main .boxes {
     width: 1446px;
