Requested changes, rewriten text

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -34,8 +34,8 @@ block page
     div.box
       h2 Do you sell controllers?
       p Short answer: No.
-      p Long answer: We distribute some #[em DIY kits] to make easier building a controller, since not everyone has a 3D printer or soldering material.
-      p You can check each device #[+a('alpakka/components') components page] for places in which you can buy components and DIY kits.
+      p Long answer: Not everyone has access to a 3D printer, or is sufficiently familiar with electronics. So, we distribute some parts as DIY kits to make it easier for people to build their own controllers.
+      p For example, the Alpakka #[+a('alpakka/components') components] page outlines where you can buy components or DIY kits.
 
     div.box
       h2 What the logo means?
