--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -22,7 +22,7 @@ block page
     div.box
       h2 Printed Circuit Board
       p The main board where all the buttons, gyro, thumbstick, LEDs and most other electronics are.
-      p Read the documentation about #[+a('/alpakka/manual/diy_pcb') making an order] to PCB manufacturer companies.
+      p Read the documentation about #[+a('/alpakka/manual/diy_pcb') making an order] from PCB manufacturer companies.
       table.data
         tr
           td Alpakka PCB KiCad schematics
@@ -43,7 +43,7 @@ block page
           td: +ax('https://github.com/inputlabs/alpakka_case/releases/latest') GitHub
         tr
           td Conductive hexagon
-          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-conductive-hexagon') from Input Labs
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-conductive-hexagon') Input Labs shop
       table.data
 
     div.box
@@ -53,51 +53,51 @@ block page
       table.data
         tr
           td Prusament PLA (in many colors)
-          td: +ax('https://www.prusa3d.com/category/prusament-pla') from Prusa
+          td: +ax('https://www.prusa3d.com/category/prusament-pla') Prusa shop
         tr
           td Protopasta PLA Conductive
-          td: +ax('https://www.proto-pasta.com/collections/conductive/products/conductive-pla') from Protopasta
+          td: +ax('https://www.proto-pasta.com/collections/conductive/products/conductive-pla') Protopasta shop
 
 
     div.box
       h2 Electronics
-      p Microcontroller board, and thru-hole components that are not usually soldered by the PCB manufacturer, so you may want to solder them yourself. Also to replace aged components. See #[+a('manual/specs') Specs].
+      p This includes the micro-controller, as well as through-hole components. Those are usually not soldered by the PCB manufacturer, so you may want to solder them yourself, and later you may even want to to replace worn components. See #[+a('manual/specs') specs].
       table.data
         tr
           td Raspberry Pi Pico
-          td: +ax('https://www.raspberrypi.com/products/raspberry-pi-pico/') reference
+          td: +ax('https://mou.sr/3xHPuDS') Mouser shop
         tr
           td Thumbstick (1x)
-          td: +ax('https://tech.alpsalpine.com/e/products/detail/RKJXV122400R/') reference
+          td: +ax('https://www.lcsc.com/product-detail/Variable-Resistors-Potentiometers_ALPSALPINE-RKJXV122400R_C918854.html') LCSC shop
         tr
           td Directional hat (1x)
-          td: +ax('https://tech.alpsalpine.com/e/products/detail/RKJXM1015004/') reference
+          td: +ax('https://www.lcsc.com/product-detail/Multi-Directional-Switches_ALPSALPINE-RKJXM1015004_C97432.html') LCSC shop
         tr
           td Rotary encoder (1x)
-          td: +ax('https://tech.alpsalpine.com/e/products/detail/EC10E1220503/') reference
+          td: +ax('https://www.lcsc.com/product-detail/Rotary-Encoders_ALPSALPINE-EC10E1220503_C110291.html') LCSC shop
         tr
           td Forward buttons / shoulders (2x)
-          td: +ax('https://tech.alpsalpine.com/e/products/detail/SKHHLNA010/') reference
+          td: +ax('https://www.lcsc.com/product-detail/Tactile-Switches_ALPSALPINE-SKHHLNA010_C125031.html') LCSC shop
         tr
-          td Back buttons / triggers (4x)
-          td: +ax('https://tech.alpsalpine.com/e/products/detail/SKQGAFE010/') reference
+          td Trigger buttons (4x)
+          td: +ax('https://www.lcsc.com/product-detail/Tactile-Switches_ALPSALPINE-SKQGAFE010_C202424.html') LCSC shop
 
     div.box
       h2 Bolts and nuts
-      p M2.5 bolts and nuts to hold the case together, and as pivot point for the triggers.
+      p M2.5 bolts and nuts to hold the case together, and as pivot points for the triggers.
       table.data
         tr
           td M2.5 DIN-912 Hex-socket 12 mm (2x)
-          td: +ax('https://www.mcmaster.com/92290A062/') reference
+          td: +ax('https://www.mcmaster.com/92290A062/') Reference
         tr
           td M2.5 DIN-912 Hex-socket 25 mm (6x)
-          td: +ax('https://www.mcmaster.com/92290A753/') reference
+          td: +ax('https://www.mcmaster.com/92290A753/') Reference
         tr
           td M2.5 DIN-934 Hex nut (8x)
-          td: +ax('https://www.mcmaster.com/91828A113/') reference
+          td: +ax('https://www.mcmaster.com/91828A113/') Reference
         tr
           td Alpakka bolts kit (all included)
-          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-bolts-kit') from Input Labs
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-bolts-kit') Input Labs shop
 
     div.box
       h2 Developer kit
@@ -106,10 +106,10 @@ block page
       table.data
         tr
           td USB to TTL serial cable
-          td: +ax('https://www.adafruit.com/product/954') from Adafruit
+          td: +ax('https://www.adafruit.com/product/954') Adafruit shop
         tr
           td JST PH 4-pin cable
-          td: +ax('https://www.adafruit.com/product/3955') from Adafruit
+          td: +ax('https://www.adafruit.com/product/3955') Adafruit shop
 
     div.box
       h2 About sourcing from Input Labs
