More text corrections

--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -114,4 +114,4 @@ block page
     div.box
       h2 About sourcing from Input Labs
       p By getting some of the components and materials directly from #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution], you help us to continue doing the research we do, and to keep releasing awesome open-source and accessible controllers for everybody.
-      p Also it increases your charisma by 10 points.
+      p Also, it increases your charisma by 10 points.
