--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -34,11 +34,11 @@ block page
     div.box
       h2 Do you sell controllers?
       p Short answer: No.
-      p Long answer: Not everyone has access to a 3D printer, or is sufficiently familiar with electronics. So, we distribute some parts as DIY kits to make it easier for people to build their own controllers.
+      p Long answer: For now we are only offering some selected parts, which are more problematic for people to source or build. And even if we offer a bigger variety of DIY kits and parts later, we may never sell assembled controllers.
       p For example, the Alpakka #[+a('alpakka/components') components] page outlines where you can buy components or DIY kits.
 
     div.box
-      h2 What the logo means?
+      h2 What does the logo mean?
       p The logo is a sinusoidal wave representing an analog signal, being captured by code brackets (digital), in the shape of an hexagon, because hexagons are the #[a.egg(target='_blank' href='https://www.youtube.com/watch?v=thOifuHs6eY') bestagons].
       p: del I'm not high, I promise.
       p When you think blue, green, or red, you associate these with some specific videogame brands, right? We don't settle with a single color, because #[em.wrap our favorite color is your favorite color], also we like rainbows, and RGB LED unicorn puke in all its PC gamer glory.
