--- a/src/pug/blog/shop_opening.pug
+++ b/src/pug/blog/shop_opening.pug
@@ -8,27 +8,27 @@ block content
   +news_header('22 February 2023', 'report_8', null)
 
   h3 Input Labs Distribution
-  p It may not be a grand opening, and it is not really a traditional shop either. We are launching #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution], a portal that we will use to organize better the distribution of:
+  p It may not be a grand opening, and it is not really a traditional shop either. We are launching #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution], a portal that we will use to better organize the distribution of:
   ul
     li Free kits for testers, as part of our #[+a('hardware_testing') Testers program].
     li #[+a('hardware_review') Review units] for the media, such as Youtube content creators and websites.
-    li Selected DIY kits, components and materials to everybody. #[em This is the new thing!]
+    li Selected DIY kits, components and materials to everybody. #[em (New)]
   hr
 
   h3 Why are we opening a shop?
   p First and foremost because we realized that there is a significant number of people interested in the project without access to 3D-printers or soldering equipment, which may seem obvious a in hindsight. We made a dedicated room on Discord (#[em diy-share-parts]) so the community members can share spare parts, make group orders, and help each other with the component sourcing. But we cannot rely on community members working for free to make the controllers to reach everyone.
 
-  p Logistics and distribution is not an easy task, we have over #[em 30 testers] now, for some of them we create parts for free but they take care of the shipping costs, organizing this through a shop interface with #[em 0 euros] articles simplifies the process a lot.
+  p The logistics and distribution to testers and reviewers consume presently a considerable part of our time and effort. We have over #[em 30 testers] now, for some of them we create parts for free but they take care of the shipping costs. Organizing this through a shop interface with #[em 0 euros] articles simplifies the process a lot.
 
-  p Additionally it is not environmentally friendly (nor cheap) for everyone to place minimum orders for components, for example the minimum amount of PCBs to order in JLCPCB is 5 (2 of them soldered and 3 of them raw), and the minimum amount of Protopasta conductive filament to buy is 50 grams while the Alpakka reference design only needs 4 grams, so quite a waste in general. On the top of that, some of the components are almost impossible to source in some regions, for example getting M2.5 #[em millimeters] bolts in the United States.
+  p Additionally it is not environmentally friendly (nor cheap) for everyone to place minimum orders for components. For example the minimum order in JLCPCB is 5 PCBs (2 with soldered SMD and 3 without). Similarly the minimum amount of Protopasta conductive filament to buy is 50 grams while the Alpakka reference design only needs 4 grams, so quite a waste in general. On the top of that, some of the components are almost impossible to source in some regions, for example getting M2.5 (metric) bolts in the United States.
 
   p Offering DIY kits and parts in smaller quantities will reduce waste.
 
-  p And finally there is the funding reason, one of #[+a('/about') Input Labs principles] is #[em to create a stable environment for research and development], as you may guess, this is not easy when doing open source and Creative Commons, one of our support streams is #[+ax(org.patreon) Patreon], which is doing great, but we need some additional help, as hopefully the "shop" will do, to create such stable environment.
+  p And finally there is the funding reason, one of #[+a('/about') Input Labs principles] is #[em to create a stable environment for research and development]. This is not easy when doing open source and Creative Commons, one of our support streams is #[+ax(org.patreon) Patreon], which is doing great, but we hope that the shop will contribute to such stability, while also giving us more insight into the actual demand.
   hr
 
   h3 So we are selling controllers now?
-  p Not really, for now we are only offering some selected parts, the more problematic for people to source or build. And even if we offer a bigger variety of DIY kits and parts later, we may never sell assembled controllers.
+  p Not really, for now we are only offering some selected parts, which are more problematic for people to source or build. And even if we offer a bigger variety of DIY kits and parts later, we may never sell assembled controllers.
   p Our project is different because you can mix and match reference parts and custom parts for building your dream controller, where would be the fun and accessibility if you could just buy a boring standard controller of the shelf?
   p At some point (assuming people do not need customizations) it may be possible to buy parts and assemble the reference designs Ikea-style, but meatballs won't be included, best we can do is some finnish Salmon soup, which is clearly the superior nordic food ;)
   hr
