Added phrase quotes for videos linked in the blog, Reordered blog sidebar. Fixed typos

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -43,10 +43,10 @@ block page
 
         h3 Other
         div
+          +wikilink('talking_about_us') They were talking about us
           +wikilink('hardware_testing') Become a tester
           +wikilink('hardware_review') Get hardware for review
-          +wikilink('talking_about_us') They were talking about us
-          +wikilink('next') Collaborate
+          +wikilink('next') Propose blog entries
           +wikilink(org.roadmap, true) Roadmap
 
     div.box.entry
