--- a/src/pug/blog/shop_opening.pug
+++ b/src/pug/blog/shop_opening.pug
@@ -16,7 +16,7 @@ block content
   hr
 
   h3 Why are we opening a shop?
-  p First and foremost because we realized that there is a significant number of people interested in the project without access to 3D-printers or soldering equipment, which may seem obvious a in hindsight. We made a dedicated room on Discord (#[em diy-share-parts]) so the community members can share spare parts, make group orders, and help each other with the component sourcing. But we cannot rely on community members working for free to make the controllers to reach everyone.
+  p First and foremost because we realized that there is a significant number of people interested in the project without access to 3D-printers or soldering equipment, which may seem obvious in hindsight. We made a dedicated room on Discord (#[em diy-share-parts]) so the community members can share spare parts, make group orders, and help each other with the component sourcing. But we cannot rely on community members working for free to make the controllers to reach everyone.
 
   p The logistics and distribution to testers and reviewers consume presently a considerable part of our time and effort. We have over #[em 30 testers] now, for some of them we create parts for free but they take care of the shipping costs. Organizing this through a shop interface with #[em 0 euros] articles simplifies the process a lot.
 
