--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -6,19 +6,49 @@ block append subtitle
 block content
   h2 They were talking about us
   hr
-  p: i Last update: 15 February 2023
+  p: i Last update: 23 February 2023
   hr
 
   ul
-    li #[+ax('https://youtu.be/0LORbheX_q8') SilverSeraphym] The Alpakka: A Creative Commons Controller
-    li #[+ax('https://youtu.be/OrucAJknMys?t=71') NerdNest] This CHANGED MY MIND about the Steam Controller 2
-    li #[+ax('https://youtu.be/Bcpz1bi7Uek?t=1641') Digikey Electronics] Favorite Projects of 2022
+    li #[+ax('https://youtu.be/0LORbheX_q8') SilverSeraphym] #[em (video)] The Alpakka: A Creative Commons Controller
+    ul
+      li: i "Most accurate gyro control I've ever used"
+      li: i "The best FPS experience with a controller I've ever had ... It immediately feels intuitive"
+      li: i "It makes me move my thumbs around less, so it reduces the pain (carpal tunnel)"
+
+    li #[+ax('https://youtu.be/OrucAJknMys?t=71') NerdNest] #[em (video)] This CHANGED MY MIND about the Steam Controller 2
+    ul
+      li: i "I want Xbox, PlayStation and Nintendo to sit up and say ... these guys figured it out"
+      li: i "I was skeptical ... but I feel like this is as good, if not better, than using a mouse"
+      li: i "The precision when using that (2 gyros) is absolute insanity, you can't imagine how good it is"
+      //- li: i "I've never used a gyroscope that felt as good as this"
+      //- li: i "It was amazing, I felt like a badass"
+      //- li: i "Valve, can you just buy them?, take all their reseach and put it in a Steam Controller v2"
+      //- li: i "I want this, from Valve"
+
+    li #[+ax('https://youtu.be/Bcpz1bi7Uek?t=1641') Digikey Electronics] #[em (video)] Favorite Projects of 2022
+      ul
+        li: i "This is a really well developed xbox-style gamepad system"
+        li: i "It is insanely well done"
+
     li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
     li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] Alpakka is an open source gamepad based on the Raspberry Pi Pico
-    li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] Could this be the year for controller innovation?
+    li #[+ax('https://rootblog.pl/alpakka-kontroler/') Rootblog] A controller that you can make yourself
+
+    li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] #[em (video)] Could this be the year for controller innovation?
+    ul
+      li: i "I want to buy it, make it a production model, and I will buy it"
+      li: i "2 gyros could be friking great for gyro steering (racing)"
+
     li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] Build your own accessible Alpakka gaming controller
     li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] This DIY game controller looks like a low-poly object taken from a video game
-    li #[+ax('https://youtu.be/ESY2u-6I8-w?t=714') LinuxGameCast] Pedro still has that funky controller
+
+    li #[+ax('https://youtu.be/ESY2u-6I8-w?t=714') LinuxGameCast] #[em (video)] Pedro still has that funky controller
+    ul
+      li: i "Spoilers: I like it a lot"
+      li: i "This makes me want to buy a 3D printer"
+      li: i "I love the idea of being able to print everything for the controller"
+
     li #[+ax('https://hi-tech.mail.ru/news/61243-soberi-sam-predstavlen-geympad-s-otkrytym-ishodnym-kodom/') Hi-tech] Do It Yourself: Open source gamepad
     li #[+ax('https://www.3printr.com/alpakka-open-source-controller-from-the-3d-printer-5160227/') 3Printr] Alpakka: Open Source Controller from the 3D Printer
     li #[+ax('https://www.trendhunter.com/trends/alpakka-controller') Trend Hunter] The Alpakka Controller Showcases an Elevated Form and Function
