Added review by Linuxgamecast

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -6,10 +6,15 @@ block append subtitle
 block content
   h2 They were talking about us
   hr
-  p: i Last update: 23 February 2023
+  p: i Last update: 27 February 2023
   hr
 
   ul
+    li #[+ax('https://linuxgamecast.com/2023/02/input-labs-alpakka-the-true-diy-controller/') LinuxGameCast] #[em (video)] Alpakka - The BEST Open-Source Controller
+    ul
+      li: i "It cuts it very close to be perfect"
+      li: i "This controller is amazing, it is the embodiment of everything that is awesome about open source"
+      li: i "Support them! it is that easy to completely shake up the controller market"
     li #[+ax('https://youtu.be/0LORbheX_q8') SilverSeraphym] #[em (video)] The Alpakka: A Creative Commons Controller
     ul
       li: i "Most accurate gyro control I've ever used"
