Added "article" labels

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -36,17 +36,17 @@ block content
         li: i "This is a really well developed xbox-style gamepad system"
         li: i "It is insanely well done"
 
-    li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
-    li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] Alpakka is an open source gamepad based on the Raspberry Pi Pico
-    li #[+ax('https://rootblog.pl/alpakka-kontroler/') Rootblog] A controller that you can make yourself
+    li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] #[em (article)] "Alpakka": A project to make your own open source gyro-equipped game controller
+    li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] #[em (article)] Alpakka is an open source gamepad based on the Raspberry Pi Pico
+    li #[+ax('https://rootblog.pl/alpakka-kontroler/') Rootblog] #[em (article)] A controller that you can make yourself
 
     li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] #[em (video)] Could this be the year for controller innovation?
     ul
       li: i "I want to buy it, make it a production model, and I will buy it"
       li: i "2 gyros could be friking great for gyro steering (racing)"
 
-    li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] Build your own accessible Alpakka gaming controller
-    li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] This DIY game controller looks like a low-poly object taken from a video game
+    li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] #[em (article)] Build your own accessible Alpakka gaming controller
+    li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] #[em (article)] This DIY game controller looks like a low-poly object taken from a video game
 
     li #[+ax('https://youtu.be/ESY2u-6I8-w?t=714') LinuxGameCast] #[em (video)] Pedro still has that funky controller
     ul
@@ -54,10 +54,10 @@ block content
       li: i "This makes me want to buy a 3D printer"
       li: i "I love the idea of being able to print everything for the controller"
 
-    li #[+ax('https://hi-tech.mail.ru/news/61243-soberi-sam-predstavlen-geympad-s-otkrytym-ishodnym-kodom/') Hi-tech] Do It Yourself: Open source gamepad
-    li #[+ax('https://www.3printr.com/alpakka-open-source-controller-from-the-3d-printer-5160227/') 3Printr] Alpakka: Open Source Controller from the 3D Printer
-    li #[+ax('https://www.trendhunter.com/trends/alpakka-controller') Trend Hunter] The Alpakka Controller Showcases an Elevated Form and Function
-    li #[+ax('https://hackaday.com/2022/12/22/alpakka-a-creative-commons-game-controller/') Hackaday] Alpakka: A creative commons game controller
-    li #[+ax('https://picockpit.com/raspberry-pi/raspberry-pi-projects-alpakka-game-controller-blackout-logger-light-meter/') PiCockpit] Alpakka controller for the Pico
+    li #[+ax('https://hi-tech.mail.ru/news/61243-soberi-sam-predstavlen-geympad-s-otkrytym-ishodnym-kodom/') Hi-tech] #[em (article)] Do It Yourself: Open source gamepad
+    li #[+ax('https://www.3printr.com/alpakka-open-source-controller-from-the-3d-printer-5160227/') 3Printr] #[em (article)] Alpakka: Open Source Controller from the 3D Printer
+    li #[+ax('https://www.trendhunter.com/trends/alpakka-controller') Trend Hunter] #[em (article)] The Alpakka Controller Showcases an Elevated Form and Function
+    li #[+ax('https://hackaday.com/2022/12/22/alpakka-a-creative-commons-game-controller/') Hackaday] #[em (article)] Alpakka: A creative commons game controller
+    li #[+ax('https://picockpit.com/raspberry-pi/raspberry-pi-projects-alpakka-game-controller-blackout-logger-light-meter/') PiCockpit] #[em (article)] Alpakka controller for the Pico
 
   p Do you know about any other media reporting on Input Labs? If so please contact us.
