Fixed more typos

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -12,28 +12,28 @@ block content
   ul
     li #[+ax('https://linuxgamecast.com/2023/02/input-labs-alpakka-the-true-diy-controller/') LinuxGameCast] #[em (video)] Alpakka - The BEST Open-Source Controller
     ul
-      li: i "It cuts it very close to be perfect"
+      li: i "It cuts it very close to being perfect"
       li: i "This controller is amazing, it is the embodiment of everything that is awesome about open source"
-      li: i "Support them! it is that easy to completely shake up the controller market"
+      li: i "Support them! It is that easy to completely shake up the controller market"
     li #[+ax('https://youtu.be/0LORbheX_q8') SilverSeraphym] #[em (video)] The Alpakka: A Creative Commons Controller
     ul
       li: i "Most accurate gyro control I've ever used"
       li: i "The best FPS experience with a controller I've ever had ... It immediately feels intuitive"
-      li: i "It makes me move my thumbs around less, so it reduces the pain (carpal tunnel)"
+      li: i "It makes me move my thumbs around less, so it reduces the pain [carpal tunnel]"
 
     li #[+ax('https://youtu.be/OrucAJknMys?t=71') NerdNest] #[em (video)] This CHANGED MY MIND about the Steam Controller 2
     ul
       li: i "I want Xbox, PlayStation and Nintendo to sit up and say ... these guys figured it out"
       li: i "I was skeptical ... but I feel like this is as good, if not better, than using a mouse"
-      li: i "The precision when using that (2 gyros) is absolute insanity, you can't imagine how good it is"
+      li: i "The precision when using that [dual gyro] is absolute insanity, you can't imagine how good it is"
       //- li: i "I've never used a gyroscope that felt as good as this"
       //- li: i "It was amazing, I felt like a badass"
-      //- li: i "Valve, can you just buy them?, take all their reseach and put it in a Steam Controller v2"
+      //- li: i "Valve, can you just buy them?, take all their research and put it in a Steam Controller v2"
       //- li: i "I want this, from Valve"
 
     li #[+ax('https://youtu.be/Bcpz1bi7Uek?t=1641') Digikey Electronics] #[em (video)] Favorite Projects of 2022
       ul
-        li: i "This is a really well developed xbox-style gamepad system"
+        li: i "This is a really well developed Xbox-style gamepad system"
         li: i "It is insanely well done"
 
     li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] #[em (article)] "Alpakka": A project to make your own open source gyro-equipped game controller
@@ -42,8 +42,8 @@ block content
 
     li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] #[em (video)] Could this be the year for controller innovation?
     ul
-      li: i "I want to buy it, make it a production model, and I will buy it"
-      li: i "2 gyros could be friking great for gyro steering (racing)"
+      li: i "I want to buy it. Make it a production model, and I will buy it"
+      li: i "2 gyros could be friking great for gyro steering [racing]"
 
     li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] #[em (article)] Build your own accessible Alpakka gaming controller
     li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] #[em (article)] This DIY game controller looks like a low-poly object taken from a video game
