--- a/src/pug/blog/gyro_ratcheting.pug
+++ b/src/pug/blog/gyro_ratcheting.pug
@@ -6,7 +6,9 @@ block append subtitle
 block content
   h2 Gyro ratcheting and flick stick
   hr
-  p: i 6 March 2023
+  p
+    i 6 March 2023 <br>
+    i 8 March 2023 (amends and corrections)
   hr
 
   h3 Introduction and disclaimer
@@ -18,7 +20,7 @@ block content
   p Using angular rate sensors (also known as gyroscope, or simply gyro) as a method for camera control in videogames is relatively new. Some commercial controllers included an IMU (Inertial Measurement Unit) sensor, those were never intended as primary input method for camera control, but mostly to enable new alternative "experiences", such as for example, playing golf swinging the controller.
   p It was up to gyro enthusiasts to start trying new ways to use the gyro on their controllers, sometimes by using custom mapping based on 3rd party PC software, or even by coding custom firmware for their proprietary controllers.
   p The first approaches, #[em first generation] of gyro aiming , were as simple as using the secondary thumbstick as a standard camera control (relative turn rate) while employing the gyro for fine camera control (for example adjusting the last milli-degrees necessary for landing a headshot in a shooter). These IMU sensors were not very accurate, so they had to be configured with a very low sensitivity, so big movements translated into small in-game camera turns. One of these first implementations was #[em Uncharted: Golden Abyss] (2011) in PlayStation Vita.
-  p Then later, the #[em second generation] of gyro aiming evolved into two parallel solutions: #[em ratcheting] and #[em flick stick], these try to solve the lack of gyro precision in different ways:
+  p Then later, the #[em second generation] of gyro aiming evolved into two parallel solutions: #[em ratcheting] and #[em flick stick], these try to solve the lack of gyro accuracy in different ways:
   table.manual.col3
     tr
       th
@@ -53,14 +55,14 @@ block content
   p: em Disadvantages
   ul
     li Full range of motion requires a high sensitivity.
-    li High sensitivity requires a higher gyro performance, as well as significant post-processing.
+    li High sensitivity requires higher gyro performance, or significant post-processing.
     li Requires a higher range of motion in the hands and/or wrists.
     li Requires setting in-game sensitivity within an acceptable range (1:3 to 1:5).
   hr
 
   h3 Flick stick
-  p Flick stick is an evolution of the thumbstick+gyro parallel method, so there is still two parallel methods to control the camera, but now the thumbstick is used in a more clever way. Instead of the classic relative turn-rate control, the thumbstick is used as an absolute 1:1 turn control on the horizontal axis by rotating it around its center. So for example by doing a physical 180° turn on the thumbstick, the in-game camera also turns 180°.
-  p This is a clear improvement in many scenarios, but also comes with some tradeoffs: The much higher 1:1 sensitivity mapping makes the thumbstick more inaccurate, usable only for fast turns.
+  p Flick stick is an evolution of the thumbstick+gyro parallel method, so there is still two parallel methods to control the camera, but now the thumbstick is used in a more clever way. Instead of the classic relative turn-rate control, the thumbstick external perimeter is mapped 1:1 to control the in-game horizontal axis. So for example pushing down (180°) on the thumbstick, the in-game camera also turns 180°.
+  p This is a clear improvement in many scenarios, as it can be used as a fast-turn shortcut in any approximate desired angle, or can be used as a more traditional turn control by swipping the thumbstick along the perimeter, though the much higher 1:1 sensitivity makes it less accurate for this purpose.
 
   p: em Advantages
   ul
@@ -124,7 +126,7 @@ block content
     li Simplicity.
     li Accessibility.
     li Shallower learning curve.
-    li More potential applications.
+    li More potential applications (better suited as a generic mouse replacement).
     li Higher performance on restricted mobility scenarios.
     li Higher performance on competitive scenarios.
 
@@ -144,7 +146,20 @@ block content
   hr
 
   h3 Conclusion
-  p With the current performance and simplicity of the Alpakka controller reference design, we believe we achieved the goal of making gyro ratcheting not just an enthusiast/experimental solution, but a first-class citizen for generalist input methods. Several #[+a('talking_about_us') independent reviewers] and members of our community agree about its exceptional characteristics, so we consider the Alpakka as the first of a #[em third generation] of gyro controllers.
+  p With the current performance and simplicity of the Alpakka controller reference design, we believe we achieved the goal of making gyro ratcheting not just an enthusiast/experimental solution, but a first-class citizen for generalist input methods, which can replace mouse input in any scenario.
+
+  p Several #[+a('talking_about_us') independent reviewers] and members of our #[+ax(org.discord) Discord] community agree about its exceptional characteristics, so we consider the Alpakka as the first of a #[em third generation] of gyro controllers.
+
+  table.manual.hdiv
+    tr
+      th Third generation of gyro controllers
+    tr
+      td Gyro control is able to support the full range of movement (large and fine).
+    tr
+      td Does not require filtering (no smoothing, no acceleration).
+    tr
+      td It is suitable for any generalist use (desktop, gaming, productivity).
+
   p And as the cherry on top, we made everything open source and Creative Commons, ain't that cool?
   hr
 
