Updated manual and sheets for firmware 0.88.0. Renamed tune settings

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -41,7 +41,7 @@ block page
           +wikilink('firmware') Firmware
           +wikilink('setup') OS setup
           +wikilink('mouse') Mouse
-          +wikilink('tune') Tune options
+          +wikilink('tune') Tune settings
           +wikilink('calibrate') Calibrate
 
         h3 Profiles
