--- a/src/pug/alpakka/manual/mouse.pug
+++ b/src/pug/alpakka/manual/mouse.pug
@@ -38,7 +38,7 @@ block content
   h3 Mouse sensitivity
   p First, it is recommended to #[+a('setup') Setup] your operative system mouse sensitivity to its default, and disable acceleration.
   p Additionally, the controller have #[em 3 built-in sensitivity presets] made to match the resolution of your monitor.
-  p The options are #[em 1080p] (low/default), #[em 1440p] (mid), or #[em 4K] (high). These can be changed in #[+a('tune') Tune options].
+  p The options are #[em 1080p] (low/default), #[em 1440p] (mid), or #[em 4K] (high). These can be changed in #[+a('tune') Tune settings].
   p Gyro input has a more limited range of usable sensitivities than a real mouse (due to the limited range of rotation of your wrists). So it is highly recommended to use the sensitivity adjustments in this table, since they are the perfect balance between accuracy and range:
   table.manual.vdiv
     tr
@@ -56,7 +56,7 @@ block content
     tr
       td
         h4 How to adjust it
-        p Set the controller sensitivity preset to match your monitor resolution (1080p/1440p/4K) in the Tune Options
+        p Set the controller sensitivity preset to match your monitor resolution (1080p/1440p/4K) in the Tune settings
         p Be sure to follow the recommendations above:
         ul
           li Set default OS sensitivity.
