--- a/src/pug/alpakka/manual/setup.pug
+++ b/src/pug/alpakka/manual/setup.pug
@@ -13,7 +13,7 @@ block content
 
   h3 Operating system
   p This device is compatible with Windows and Linux, and #[em does not require to install any driver].
-  p The controller can be configured in #[+a('tune') Tune options] to match your operative system, the options are #[em Windows (default) or GNU/Linux].
+  p The controller can be configured in #[+a('tune') Tune settings] to match your operative system, the options are #[em Windows (default) or GNU/Linux].
   hr
 
   h3 Mouse sensitivity in the operative system
