Fixed recommended perimeters

--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -38,8 +38,8 @@ block content
       td Recommended filament
       td Standard PLA 1.75 mm
     tr
-      td Recommended perimeter thickness
-      td 2 mm
+      td Recommended perimeters
+      td 3
     tr
       td Recommended infill
       td Gyroid 10%
@@ -62,8 +62,8 @@ block content
       td Recommended filament
       td Standard PLA 1.75 mm
     tr
-      td Recommended perimeter thickness
-      td 2 mm
+      td Recommended perimeters
+      td 3
     tr
       td Recommended infill
       td Gyroid 10%
@@ -87,8 +87,8 @@ block content
       td Recommended filament
       td Standard PLA 1.75 mm
     tr
-      td Recommended perimeter thickness
-      td 2 mm
+      td Recommended perimeters
+      td 3
     tr
       td Recommended infill
       td Gyroid 15%
@@ -117,8 +117,8 @@ block content
       td Recommended filament
       td Standard PLA 1.75 mm
     tr
-      td Recommended perimeter thickness
-      td 2 mm
+      td Recommended perimeters
+      td 3
     tr
       td Recommended infill
       td Gyroid 15%
@@ -141,8 +141,8 @@ block content
       td Recommended filament
       td Conductive PLA 1.75 mm
     tr
-      td Recommended perimeter thickness
-      td 3 mm
+      td Recommended perimeters
+      td 3
     tr
       td Recommended infill
       td Solid 100%
