Perimeters revert back to 2

--- a/src/pug/blog/gyro_ratcheting.pug
+++ b/src/pug/blog/gyro_ratcheting.pug
@@ -154,7 +154,7 @@ block content
     tr
       th Third generation of gyro controllers
     tr
-      td Gyro control is able to support the full range of movement (large and fine).
+      td Gyro control supports full range of movement (large and fine).
     tr
       td Does not require filtering (no smoothing, no acceleration).
     tr
