Added progress report 9

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -22,7 +22,7 @@
 
   const parent = {
     db:            '/db/stats',
-    blog:          '/blog/shop_opening',
+    blog:          '/blog/report_9',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
