--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_9') Progress report 9
     li: +a('report_8') Progress report 8
     li: +a('report_7') Progress report 7
     li: +a('report_6') Progress report 6
