--- a/src/pug/blog/shop_opening.pug
+++ b/src/pug/blog/shop_opening.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Shop opening
-  +news_header('22 February 2023', 'report_8', null)
+  +news_header('22 February 2023', 'report_8', 'report_9')
 
   h3 Input Labs Distribution
   p It may not be a grand opening, and it is not really a traditional shop either. We are launching #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution], a portal that we will use to better organize the distribution of:
