--- a/src/pug/blog/report_9.pug
+++ b/src/pug/blog/report_9.pug
@@ -76,7 +76,7 @@ block content
   hr
 
   h3 Research notes about gyro ratcheting and flick stick
-  p We wrote about our experience and learnings about different methods for using gyro in a new blog entry #[+a('gyro_ratcheting') Gyro ratcheting and flick stick].
+  p We wrote a new blog entry about our experience and learnings with different gyro methods: #[+a('gyro_ratcheting') Gyro ratcheting and flick stick].
   hr
 
   p Thanks a lot for the support! <br> - M&M <3
